<resources>
    <string name="app_name">Road Report</string>
    <string name="app_name_singkat">RoaR</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_profil">Profil</string>
    <string name="drawer_item_report">Report</string>
    <string name="drawer_item_laporan">Laporan Anda</string>
    <string name="welcome">Selamat datang</string>
    <string name="is_login">You have been successfully login </string>
    <string name="judul">Nama Lengkap</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="logout">Log Out</string>
    <string name="daftar">Register</string>
    <string name="menu_daftar">SIGN UP</string>
    <string name="reset">RESET PASSWORD</string>
    <string name="lupa_password">LUPA PASSWORD</string>
    <string name="reset_password">RESET</string>
    <string name="kembali_login">KEMBALI KE LOGIN</string>
    <string name="masukkan_email">Masukkan E-Mail anda</string>
    <string name="done">DONE</string>
    <string name="next">NEXT</string>
    <string name="sukses_login">You have been successfully login </string>
    <string name="registration_instruction">Belum mempunyai akun? Klik tombol \'Sign Up\' di atas.</string>
    <string name="btn_link_to_register">Belum Menjadi member? Daftar sekarang.</string>
    <string name="btn_link_to_login">Sudah terdaftar! Log in sekarang.</string>
    <string name="btnUploadToServer">btnUploadToServer</string>
    <string name="kirim">Post Laporan</string>
    <string name="judull">Judul</string>
    <string name="keluhan">Keluhan anda</string>
    <string name="atau">atau</string>
</resources>
