<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#2E3237"
    tools:context="com.thor.roadreport.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nama_field"
            android:hint="@string/judul"
            android:inputType="textCapWords"
            app:met_baseColor="@color/input_register"
            app:met_primaryColor="@color/colorWhiteText"
            app:met_textColorHint="@color/input_register"
            app:met_textColor="@color/colorWhiteText"
            app:met_iconLeft="@drawable/ic_account"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/judul" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_field"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_baseColor="@color/input_register"
            app:met_primaryColor="@color/colorWhiteText"
            app:met_textColorHint="@color/input_register"
            app:met_textColor="@color/colorWhiteText"
            app:met_iconLeft="@drawable/ic_email"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/email" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_baseColor="@color/input_register"
            app:met_primaryColor="@color/colorWhiteText"
            app:met_textColorHint="@color/input_register"
            app:met_textColor="@color/colorWhiteText"
            app:met_iconLeft="@drawable/ic_key"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/password" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent2"
            android:text="@string/daftar"
            android:textColor="@color/colorWhiteText" />

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhiteText"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>
