<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".PasswordResetActivity">

    <include layout="@layout/toolbar_gradient" />

    <LinearLayout
        android:id="@+id/frame_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#90000000"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:text="@string/masukkan_email"
                android:id="@+id/textView"
                android:textColor="@color/colorWhiteText"
                android:layout_centerHorizontal="true"
                android:textSize="17sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forpas"
                android:hint="@string/email"
                android:layout_below="@id/textView"
                app:met_baseColor="@color/colorWhiteText"
                app:met_primaryColor="@color/colorPrimary"
                app:met_textColorHint="@color/colorWhiteText"
                app:met_iconLeft="@drawable/ic_email"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/email" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/respass"
                android:background="@color/primary"
                android:text="@string/reset_password"
                android:textColor="@color/colorWhiteText"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/forpas"
                android:layout_alignParentLeft="true" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/bktolog"
                android:background="@color/primary"
                android:text="@string/kembali_login"
                android:textColor="@color/colorWhiteText"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/forpas"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:id="@+id/alert"
            android:layout_gravity="center"
            android:textColor="@color/colorWhiteText"/>
    </LinearLayout>
</RelativeLayout>