<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@color/colorWhiteText" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textSize="15dp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

    <!--
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimaryDark"
        tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_field"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:met_baseColor="@color/colorPrimaryLight"
                app:met_primaryColor="@color/colorWhiteText"
                app:met_textColorHint="@color/colorPrimaryLight"
                app:met_textColor="@color/colorWhiteText"
                app:met_iconLeft="@drawable/ic_email"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/email" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_field"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorPrimaryLight"
                app:met_primaryColor="@color/colorWhiteText"
                app:met_textColorHint="@color/colorPrimaryLight"
                app:met_textColor="@color/colorWhiteText"
                app:met_iconLeft="@drawable/ic_key"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/password" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhiteText"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>
    -->